style: fix card overflow when resizing screen

--- a/src/Components/JobCard/JobCard.css
+++ b/src/Components/JobCard/JobCard.css
@@ -1,5 +1,5 @@
 .job {
-    @apply relative flex flex-col justify-between items-start gap-4 min-h-[16em] bg-white rounded-2xl p-6 cursor-pointer transition-all duration-150 ease-in-out hover:shadow-lg hover:shadow-gray-200;
+    @apply relative flex flex-col justify-between items-start gap-4 min-h-[18em] bg-white rounded-2xl p-6 cursor-pointer transition-all duration-150 ease-in-out hover:shadow-lg hover:shadow-gray-200;
 }
 
 .job__status{
